# atBB

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build_lexicons.sh  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/: .yamllint.yaml
.github/workflows/: docker-publish.yaml  lexicon.yaml
db/migrations/postgres/: 20241208114313_create_forums_and_posts.sql
db/migrations/sqlite/: 20241208114313_create_forums_and_posts.sql
examples/: jetstream.rs
lexicons/: .gitignore  .yamllint.yaml
lexicons/com/atproto/repo/: strongRef.yaml
lexicons/space/atbb/: forum.json  post.json  post.yaml
lexicons/space/atbb/forum/: forum.json  forum.yaml
src/: api.rs  lib.rs  main.rs  models.rs  resources.rs  server.rs  web.rs
src/api/: routes.rs
src/api/routes/: healthz.rs  v1.rs
src/api/routes/healthz/: liveness.rs  readiness.rs
src/api/routes/v1/: forums.rs
src/api/routes/v1/forums/: get.rs
src/models/: forum.rs
src/resources/: database.rs
src/resources/database/: migrations.rs
src/resources/database/migrations/: v1.rs
src/static/: style.css
src/templates/: base.html
src/web/: pages.rs
src/web/pages/: index.rs
src/web/static/: style.css
src/web/templates/: base.html  index.html
src/web/templates/components/: forums.html
