[package]
name = "atBB"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
async-trait = "0.1.83"
atrium-api = "0.24.8"
clap = { version = "4.5.20", features = ["derive"] }
jetstream-oxide = "0.1.0"
tokio = { version = "1.41.1", features = ["full", "sync"] }
