[package]
name = "atBB"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-files = "0.6.5"
anyhow = "1.0.93"
async-trait = "0.1.83"
atrium-api = "0.24.8"
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.2"
jetstream-oxide = "0.1.0"
lazy_static = "1.4.0"
serde = { version = "1.0.195", features = ["derive"] }
tera = "1.19.1"
tokio = { version = "1.41.1", features = ["full", "sync"] }
