[package]
name = "atbb"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-embed = "0.1.0"
async-trait = "0.1.83"
atrium-api = "0.24.8"
color-eyre = "0.6.2"
health = "0.2"
http-body = "1.0.1"
http-body-util = "0.1.2"
jetstream-oxide = "0.1.0"
lazy_static = "1.4.0"
rust-embed = { version = "8.5.0", features = ["compression", "debug-embed", "include-exclude"] }
sea-query = "0.32.1"
sea-query-binder = { version = "0.7.0" }
serde = { version = "1.0.195", features = ["derive"] }
sqlx = "0.8"
tera = "1.19.1"
thiserror = "2.0.0"
tokio = { version = "1.41.1", features = ["full", "sync"] }
